# nyc_taxi_ds

./: .gitignore  app.py  pyproject.toml  requirements.txt
.github/workflows/: dbt_prod_run.yml  evidence_deploy.yml
nyc_taxi_dag/: README.md  pyproject.toml  setup.cfg  setup.py
nyc_taxi_dag/nyc_taxi_dag/: definitions.py
nyc_taxi_motherduck/: dbt_project.yml  package-lock.yml  profiles.yml
nyc_taxi_motherduck/macros/: clean_currency.sql  get_payment_type.sql  get_rate_code.sql  get_trip_type.sql  get_vendor.sql
nyc_taxi_motherduck/models/: sources.yml
nyc_taxi_motherduck/models/marts/: fct_daily_distribution.sql  fct_geo_distribution.sql  fct_hourly_distribution.sql  fct_monthly_revenue.sql  fct_revenue_flow.sql
nyc_taxi_motherduck/models/silver/: schema.yml  stg_green_trips.sql  stg_yellow_trips.sql
nyc_taxi_motherduck/reports/: evidence.config.yaml
nyc_taxi_motherduck/reports/.evidence/customization/: .profile.json
nyc_taxi_motherduck/reports/pages/: index.md  monthly_kpis.md  revenue_flow.md  temporal_trends.md  trips_by_zone.md
nyc_taxi_motherduck/reports/sources/nyc_taxi/: connection.yaml  daily_data.sql  geo_data.sql  hourly_data.sql  latest_kpis.sql  revenue_sources_data.sql
